--- a/Assets/Switch/client.ini
+++ b/Assets/Switch/client.ini
@@ -208,3 +208,4 @@ T_199 = "Ring Fit Adventure"
 T_200 = "Super Mario 3D All-Stars"
 T_201 = "Pikmin 3 Deluxe"
 T_202 = "Hyrule Warriors: Age of Calamity"
+T_203 = "Super Mario 3D World + Bowser's Fury"
